--- a/Webpages/agent.html
+++ b/Webpages/agent.html
@@ -22,4 +22,76 @@
 </head>
 
   <body>
-    
+		<div class="container-contact100">
+		<div class="wrap-contact100">
+			<form id="data-entry" class="contact100-form validate-form">
+				<span class="contact100-form-title">
+					Siti Collection Agent Entry Form - Tiruvuru
+				</span>
+
+				<div class="wrap-input100 bg1 rs1-wrap-input100 validate-input" data-validate = "Enter VC Number">
+					<span class="label-input100">VC Number</span>
+					<input class="input100" type="text" pattern="[0]{1}[1-9]{10}" maxlength="11" name="vc_no" id="vc_no" placeholder="Enter VC Number" required>
+				</div>
+
+				<div class="container-contact100-form-btn space">
+				<button class="contact100-form-btn">
+					<span>
+						<a onclick='customerSearch()' id="search">Validate VC</a>
+						<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
+					</span>
+				</button>
+			</div>
+
+		<div class="wrap-input100 rs1-wrap-input100 validate-input bg1" data-validate="Please Type Receipt Number">
+			<span class="label-input100">Receipt Number *</span>
+			<input class="input100" type="number" name="receipt" placeholder="Enter Receipt Number" required>
+		</div>
+
+		<div class="wrap-input100 validate-input bg1 rs1-wrap-input100">
+			<span class="label-input100">Package *</span>
+			<input class="input100" name="package" placeholder="Customer package choice" placeholder="Enter Amount Paid" required>
+		</div>
+
+						<div class="wrap-input100 validate-input bg1 rs1-wrap-input100" data-validate = "Enter Amount Paid by Customer">
+			<span class="label-input100">Amount *</span>
+			<input class="input100" type="number" name="amount" placeholder="Enter Amount Paid " required>
+		</div>
+
+		<div class="wrap-input100 bg0 rs1-alert-validate">
+			<span class="label-input100">Remarks</span>
+			<textarea class="input100" name="remarks" placeholder="Your message here..."></textarea>
+		</div>
+
+		<div class="wrap-input100 validate-input bg1 rs1-wrap-input100" data-validate = "Enter PIN to submit">
+			<span class="label-input100">PIN *</span>
+			<input class="input100" type="number" id="password-3" pattern="[0-9]*" name="agent_name" placeholder="Enter Your PIN " required>
+		</div>
+
+					<div class="container-contact100-form-btn">
+					<button class="contact100-form-btn">
+						<span>
+						<a id="submit-form" onclick="return agentAuth()" href="tvr-agent.html">Submit Entry</a>
+						<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
+					</span>
+				</button>
+				</div>
+					<div class="wrap-contact100">
+						<span id="customer_details">
+										<ul class="label-input100">
+											<p>Customer VC -</p>
+											<li id="c_vc" class="input100"></li>
+											<p>Customer Name -</p>
+											<li id="c_name" class="input100"></li>
+											<p>Customer Phone -</p>
+											<li id="c_phone" class="input100"></li>
+											<p>Due Date -</p>
+											<li id="d_d" class="input100"></li>
+										</ul>
+						</span>
+				</div>
+			</form>
+		</div>
+	</div>
+</body>
+</html>
