--- a/Webpages/agent.html
+++ b/Webpages/agent.html
@@ -26,13 +26,28 @@
 		<div class="wrap-contact100">
 			<form id="data-entry" class="contact100-form validate-form">
 				<span class="contact100-form-title">
-					Siti Collection Agent Entry Form - Tiruvuru
+					Siti Collection Agent Entry Form
 				</span>
 
 				<div class="wrap-input100 bg1 rs1-wrap-input100 validate-input" data-validate = "Enter VC Number">
 					<span class="label-input100">VC Number</span>
 					<input class="input100" type="text" pattern="[0]{1}[1-9]{10}" maxlength="11" name="vc_no" id="vc_no" placeholder="Enter VC Number" required>
 				</div>
+
+				<div class="wrap-contact100">
+					<span id="customer_details">
+									<ul class="label-input100">
+										<p>Customer VC -</p>
+										<li id="c_vc" class="input100"></li>
+										<p>Customer Name -</p>
+										<li id="c_name" class="input100"></li>
+										<p>Customer Phone -</p>
+										<li id="c_phone" class="input100"></li>
+										<p>Due Date -</p>
+										<li id="d_d" class="input100"></li>
+									</ul>
+					</span>
+			</div>
 
 				<div class="container-contact100-form-btn space">
 				<button class="contact100-form-btn">
@@ -76,20 +91,7 @@
 					</span>
 				</button>
 				</div>
-					<div class="wrap-contact100">
-						<span id="customer_details">
-										<ul class="label-input100">
-											<p>Customer VC -</p>
-											<li id="c_vc" class="input100"></li>
-											<p>Customer Name -</p>
-											<li id="c_name" class="input100"></li>
-											<p>Customer Phone -</p>
-											<li id="c_phone" class="input100"></li>
-											<p>Due Date -</p>
-											<li id="d_d" class="input100"></li>
-										</ul>
-						</span>
-				</div>
+
 			</form>
 		</div>
 	</div>
