--- a/Webpages/agent.html
+++ b/Webpages/agent.html
@@ -60,7 +60,7 @@
 
 		<div class="wrap-input100 rs1-wrap-input100 validate-input bg1" data-validate="Please Type Receipt Number">
 			<span class="label-input100">Receipt Number *</span>
-			<input class="input100" type="number" name="receipt" placeholder="Enter Receipt Number" required>
+			<input class="input100" type="text" name="receipt" placeholder="Enter Receipt Number" required>
 		</div>
 
 		<div class="wrap-input100 validate-input bg1 rs1-wrap-input100">
@@ -86,7 +86,7 @@
 					<div class="container-contact100-form-btn">
 					<button class="contact100-form-btn">
 						<span>
-						<a id="submit-form" onclick="return agentAuth()" href="tvr-agent.html">Submit Entry</a>
+						<a id="submit-form" onclick="return agentAuth()" href="agent.html">Submit Entry</a>
 						<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
 					</span>
 				</button>
