--- a/Webpages/agent.html
+++ b/Webpages/agent.html
@@ -24,7 +24,7 @@
   <body>
 		<div class="container-contact100">
 		<div class="wrap-contact100">
-			<form id="data-entry" class="contact100-form validate-form">
+			<form class="contact100-form validate-form">
 				<span class="contact100-form-title">
 					Siti Collection Agent Entry Form
 				</span>
@@ -37,30 +37,30 @@
 				<div class="container-contact100-form-btn space">
 				<button class="contact100-form-btn">
 					<span>
-						<a onclick='customerSearch()' id="search">Validate VC</a>
-						<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
+						<a>Validate VC</a>
+						<i aria-hidden="true"></i>
 					</span>
 				</button>
 			</div>
 
 				<div class="wrap-contact100">
-					<span id="customer_details">
+					<span>
 									<ul class="label-input100">
 										<p>Customer VC -</p>
-										<li id="c_vc" class="input100"></li>
+										<li class="input100"></li>
 										<p>Customer Name -</p>
-										<li id="c_name" class="input100"></li>
+										<li class="input100"></li>
 										<p>Customer Phone -</p>
-										<li id="c_phone" class="input100"></li>
+										<li class="input100"></li>
 										<p>Due Date -</p>
-										<li id="d_d" class="input100"></li>
+										<li class="input100"></li>
 									</ul>
 					</span>
 			</div>
 
 		<div class="wrap-input100 rs1-wrap-input100 validate-input bg1" data-validate="Please Type Receipt Number">
 			<span class="label-input100">Receipt Number *</span>
-			<input class="input100" type="text" name="receipt" placeholder="Enter Receipt Number" required>
+			<input class="input100" type="number" name="receipt" placeholder="Enter Receipt Number" required>
 		</div>
 
 		<div class="wrap-input100 validate-input bg1 rs1-wrap-input100">
@@ -87,7 +87,7 @@
 					<button class="contact100-form-btn">
 						<span>
 						<a id="submit-form" onclick="return agentAuth()" href="agent.html">Submit Entry</a>
-						<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
+						<i aria-hidden="true"></i>
 					</span>
 				</button>
 				</div>
