--- a/Webpages/agent.html
+++ b/Webpages/agent.html
@@ -78,15 +78,10 @@
 			<textarea class="input100" name="remarks" placeholder="Your message here..."></textarea>
 		</div>
 
-		<div class="wrap-input100 validate-input bg1 rs1-wrap-input100" data-validate = "Enter PIN to submit">
-			<span class="label-input100">PIN *</span>
-			<input class="input100" type="number" id="password-3" pattern="[0-9]*" name="agent_name" placeholder="Enter Your PIN " required>
-		</div>
-
 					<div class="container-contact100-form-btn">
 					<button class="contact100-form-btn">
 						<span>
-						<a id="submit-form" onclick="return agentAuth()" href="agent.html">Submit Entry</a>
+						<a href="agent.html">Submit Entry</a>
 						<i aria-hidden="true"></i>
 					</span>
 				</button>
