--- a/Webpages/agent.html
+++ b/Webpages/agent.html
@@ -44,7 +44,8 @@
 						</button>
 					</div>
 
-					<div id="toggleDIV" class="wrap-contact100">
+					<div id="toggleDIV">
+					<div class="wrap-contact100">
 						<span>
 										<ul class="label-input100">
 											<p>Customer VC -</p>
@@ -86,6 +87,7 @@
 								<i aria-hidden="true"></i>
 							</span>
 						</button>
+					</div>
 					</div>
 
 				</form>
