--- a/Webpages/agent.html
+++ b/Webpages/agent.html
@@ -80,7 +80,7 @@
 						<textarea class="input100" name="remarks" placeholder="Your message here..."></textarea>
 					</div>
 
-					<div class="container-contact100-form-btn">
+					<div class="container-contact100-form-btn space">
 						<button class="contact100-form-btn">
 							<span>
 								<a href="agent.html">Submit Entry</a>
