--- a/Webpages/agent.html
+++ b/Webpages/agent.html
@@ -32,7 +32,7 @@
 
 					<div class="wrap-input100 bg1 rs1-wrap-input100 validate-input" data-validate = "Enter VC Number">
 						<span class="label-input100">VC Number</span>
-						<input class="input100" type="text" pattern="[0]{1}[1-9]{10}" maxlength="11" name="vc_no" id="vc_no" placeholder="Enter VC Number" required>
+						<input id="vc" class="input100" type="text" pattern="[0]{1}[1-9]{10}" maxlength="11" name="vc_no" id="vc_no" placeholder="Enter VC Number" required>
 					</div>
 
 					<div class="container-contact100-form-btn space">
